@@ -26,7 +26,7 @@
 
 #ifdef HAVE_OSF_SIA
 
-int	auth_sia_password(Authctxt *, char *);
+int	sys_auth_passwd(Authctxt *, char *);
 void	session_setup_sia(struct passwd *, char *);
 
 #endif /* HAVE_OSF_SIA */
